@@ -10,10 +10,10 @@ parts of fltk is a typedef defined like this, pointing at a structure
 <ul><pre><tt>typedef Fl_Font_* Fl_Font;</tt></pre></ul>
 
 <p>To draw text in a font you use <a
-href=drawing.html#fl_font><tt>fl_font(Fl_Font,size)</tt></a> to select
+href="drawing.html#fl_font"><tt>fl_font(Fl_Font,size)</tt></a> to select
 a font and scale, and then <a
-href=drawing.html#fl_draw><tt>fl_draw(const char*)</tt></a> to draw
-letters. See the documentaion on <a href=drawing.html>drawing
+href="drawing.html#fl_draw"><tt>fl_draw(const char*)</tt></a> to draw
+letters. See the documentaion on <a href="drawing.html">drawing
 functions</a>.
 
 <p>The following Fl_Font values are predefined:</p>
@@ -86,7 +86,7 @@ matter what encoding is set.
 Sets <i>array</i> to point at a list of sizes.  The return value is
 the length of this array.  The sizes are sorted from smallest to
 largest and indicate what sizes can be given to <a
-href=drawing.html#fl_font><TT>fl_font()</TT></a> that will be matched
+href="drawing.html#fl_font"><TT>fl_font()</TT></a> that will be matched
 exactly (<TT>fl_font()</TT> will pick the closest size for other
 sizes).  A zero in the first location of the array indicates a
 scalable font, where any size works, although the array may list sizes
