@@ -1,5 +1,5 @@
 //
-// "$Id: fl_font_xft.cxx,v 1.4 2001/12/16 22:32:03 spitzak Exp $"
+// "$Id: fl_font_xft.cxx,v 1.5 2002/03/09 21:25:36 spitzak Exp $"
 //
 // Copyright 2001 Bill Spitzak and others.
 //
@@ -149,7 +149,8 @@ Fl_FontSize::~Fl_FontSize() {
 
 #if 1
 // Some of the line spacings these return are insanely big!
-int fl_height() { return current_font->height; }
+//int fl_height() { return current_font->height; }
+int fl_height() { return current_font->ascent + current_font->descent; }
 int fl_descent() { return current_font->descent; }
 #else
 int fl_height() { return fl_size_;}
@@ -170,23 +171,43 @@ extern Colormap fl_overlay_colormap;
 extern XVisualInfo* fl_overlay_visual;
 #endif
 
+// For some reason Xft produces errors if you destroy a window whose id
+// still exists in an XftDraw structure. It would be nice if this is not
+// true, a lot of junk is needed to try to stop this:
+
+static XftDraw* draw;
+static Window draw_window;
+#if USE_OVERLAY
+static XftDraw* draw_overlay;
+static Window draw_overlay_window;
+#endif
+
+void fl_destroy_xft_draw(Window id) {
+  if (id == draw_window)
+    XftDrawChange(draw, draw_window = fl_message_window);
+#if USE_OVERLAY
+  if (id == draw_overlay_window)
+    XftDrawChange(draw_overlay, draw_overlay_window = fl_message_window);
+#endif
+}
+
 void fl_draw(const char *str, int n, int x, int y) {
 #if USE_OVERLAY
-  static XftDraw* draw_main, * draw_overlay;
-  XftDraw*& draw = fl_overlay ? draw_overlay : draw_main;
-  if (!draw)
-    draw = XftDrawCreate(fl_display, fl_window,
-			 (fl_overlay?fl_overlay_visual:fl_visual)->visual,
-			 fl_overlay ? fl_overlay_colormap : fl_colormap);
-  else
-    XftDrawChange(draw, fl_window);
-#else
-  static XftDraw *draw = 0;
-  if (!draw)
-    draw = XftDrawCreate(fl_display, fl_window, fl_visual->visual, fl_colormap);
-  else
-    XftDrawChange(draw, fl_window);
+  XftDraw*& draw = fl_overlay ? draw_overlay : ::draw;
+  if (fl_overlay) {
+    if (!draw) 
+      draw = XftDrawCreate(fl_display, draw_overlay_window = fl_window,
+			   fl_overlay_visual->visual, fl_overlay_colormap);
+    else //if (draw_overlay_window != fl_window)
+      XftDrawChange(draw, draw_overlay_window = fl_window);
+  } else
 #endif
+  if (!draw)
+    draw = XftDrawCreate(fl_display, draw_window = fl_window,
+			 fl_visual->visual, fl_colormap);
+  else //if (draw_window != fl_window)
+    XftDrawChange(draw, draw_window = fl_window);
+
   Region region = fl_clip_region();
   if (region) {
     if (XEmptyRegion(region)) return;
@@ -205,6 +226,7 @@ void fl_draw(const char *str, int n, int x, int y) {
 
   XftDrawString8(draw, &color, current_font, x+fl_x_, y+fl_y_,
                     (XftChar8 *)str, n);
+
 }
 
 ////////////////////////////////////////////////////////////////
@@ -368,5 +390,5 @@ int Fl_Font_::encodings(const char**& arrayp) const {
 }
 
 //
-// End of "$Id: fl_font_xft.cxx,v 1.4 2001/12/16 22:32:03 spitzak Exp $"
+// End of "$Id: fl_font_xft.cxx,v 1.5 2002/03/09 21:25:36 spitzak Exp $"
 //
